# interfaced

./: README.md  interfaced.py  interfaced_tests.py  pyproject.toml
src/interfaced/: __init__.py
tests/: tests.py
